@@ -1,3 +1,10 @@
+2011-12-04 Riccardo Mottola <rm@gnu.org>
+
+	* TerminalParser_Linux.m
+	* TerminalViewPrefs.h
+	* TerminalViewPrefs.m
+	Add Alt is not Meta option, to enable the usage of AltGr, when left Alt is command.
+
 2011-05-07 Riccardo Mottola <rm@gnu.org>
 
 	* Terminal.tiff
